# hilg

./: Makefile  README.md  box_mover.c  configure.ac  hilg.c  hilg.h  snake.c
examples/: Makefile.am  box_mover.c  snake.c
include/: hilg.h
src/: Makefile.am  hilg.c  hilg_ncurses.c  hilg_sdl.c
